--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "grommet": "^2.10.0",
+    "grommet-icons": "^4.4.0",
     "messageformat": "^2.3.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
