--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-hook-form": "^4.9.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
+    "react-star-rating-component": "^1.4.1",
     "styled-components": "^5.0.1"
   },
   "scripts": {
@@ -37,5 +38,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-plugin-react": "^7.19.0"
   }
 }
