--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "grommet": "^2.10.0",
     "grommet-icons": "^4.4.0",
     "messageformat": "^2.3.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-hook-form": "^4.9.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-hook-form": "^5.4.0",
+    "react-icons": "^3.9.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
     "react-star-rating-component": "^1.4.1",
