--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^10.4.3",
     "@testing-library/user-event": "^10.4.1",
     "axios": "^0.19.2",
+    "express": "^4.17.1",
     "messageformat": "^2.3.0",
     "react": "^16.13.1",
     "react-dev-utils": "^10.2.1",
@@ -20,7 +21,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "CI= react-scripts build",
+    "build": "react-scripts build",
+    "prod": "node runner/runner.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
