--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 DB_URI=mongodb+srv://root:toor@cluster0-wkw4u.gcp.mongodb.net/test?retryWrites=true&w=majority
 SECRECT=thisisasecret
 SERVER_PORT=3001
+NODE_ENV=production
